apps/media/sonarr/deployment.yaml
#
# Reference:
# https://docs.linuxserver.io/images/docker-sonarr/
#

apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: sonarr
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: sonarr
  type: ClusterIP
  ports:
    - name: http
      port: 8989
      protocol: TCP
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: sonarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: sonarr
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: sonarr
    spec:
      restartPolicy: Always
      nodeAffinity:
        required:
          nodeSelectorTerms:
            - matchExpressions:
                - key: kubernetes.io/hostname
                  operator: In
                  values:
                    - minas-tirith
                    - minas-tirith-vm
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8989
              protocol: TCP
          volumeMounts:
            - name: sonarr-pvc
              mountPath: /config
            - name: deluge-pvc
              mountPath: /data
              subPath: data
            - name: media-data-pvc
              mountPath: /tv
              subPath: tv
      volumes:
        - name: sonarr-pvc
          persistentVolumeClaim:
            claimName: sonarr-pvc
        - name: deluge-pvc
          persistentVolumeClaim:
            claimName: deluge-pvc
        - name: media-data-pvc
          persistentVolumeClaim:
            claimName: media-data-pvc
